--- a/kubernetes/30-dplt-redis.yaml
+++ b/kubernetes/30-dplt-redis.yaml
@@ -1,7 +1,27 @@
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: redis-pv
+  labels:
+    type: local
+spec:
+  capacity:
+    storage: 16Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/data"
+  claimRef:
+    apiVersion: v1
+    kind: PersistentVolumeClaim
+    name: redis-pvc
+    namespace: default
+
+---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: redis
+  name: redis-pvc
 spec:
   accessModes:
     - ReadWriteOnce
@@ -35,4 +55,4 @@ spec:
       volumes:
         - name: redis
           persistentVolumeClaim:
-            claimName: redis
+            claimName: redis-pvc
