--- a/kubernetes/30-stfs-rabbitmq.yaml
+++ b/kubernetes/30-stfs-rabbitmq.yaml
@@ -1,7 +1,26 @@
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: rabbitmq-pv
+  labels:
+    type: local
+spec:
+  capacity:
+    storage: 16Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/data"
+  claimRef:
+    apiVersion: v1
+    kind: PersistentVolumeClaim
+    name: rabbitmq-pvc
+    namespace: default
+---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: rabbitmq
+  name: rabbitmq-pvc
 spec:
   accessModes:
     - ReadWriteOnce
@@ -59,4 +78,4 @@ spec:
       volumes:
         - name: rabbitmq
           persistentVolumeClaim:
-            claimName: rabbitmq
+            claimName: rabbitmq-pvc
